[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "langgraph-rag-assistant"
version = "1.0.0"
description = "Production-grade RAG system with LangGraph stateful workflows"
readme = "README.md"
licence = { text = "MIT"}
requires-python = ">=3.11"
authors = [{ name = "Rustyfulll", email = "kanarusty2002@gmail.com"}]
keywords = ["RAG", "LangGraph", "LangChain", "AI", "LLM"]


[tool.ruff]
line-length = 1000
target-version = "py311"


[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"


[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "src/main.py"]